# mactemp

./: .gitignore  Cargo.toml  README.md  create_app_bundle.sh  create_dmg.sh
.github/workflows/: release.yml
assets/: mactemp.icns
src/: autostart.rs  main.rs  menu.rs  smc.rs  system_stats.rs
